--- a/src/app/components/change-password/change-password.component.html
+++ b/src/app/components/change-password/change-password.component.html
@@ -1,74 +1,71 @@
-<div class="wrapper">
-    <div class="signin">
-    <div class="signin mt-3 mt-md-0">
-        <div class="d-flex align-items-center justify-content-center">
-            <img class="logo" src="../../../assets/img/login.png" alt="img login">
-            <h2 class="mx-3 mt-2">CAMBIO DE CONTRASEÑA</h2>
+<div class="hero-banner">
+    <div class="wrapper">
+        <div class="signin">
+        <div class="signin mt-3 mt-md-0">
+            <div class="d-flex align-items-center justify-content-center">
+                <img class="logo" src="../../../assets/img/login.png" alt="img login">
+                <h2 class="mx-3 mt-2">CAMBIO DE CONTRASEÑA</h2>
+            </div>
+            <form #usuarioForm="ngForm" (ngSubmit)="actualizarContrasenia(usuarioForm)">
+                <div class="form-floating mt-4 mb-3">
+                    <input type="email" id="email" name="email" placeholder="Correo electrónico" class="form-control"
+                        required pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}" [(ngModel)]="email"
+                        #emailInput="ngModel">
+                    <label for="email"><span class="text-danger">*</span>Correo electrónico:</label>
+                    <small id="mensajeErrorCelular" class="form-text text-danger"
+                        [style.display]="(emailInput.invalid && emailInput.touched) ? 'block' : 'none'">
+                        Ingrese un correo electrónico válido (ejemplo@email.com).</small>
+                </div>
+                <div class="mt-3 mb-3">
+                    <div class="form-floating position-relative">
+                        <input [type]="mostrarPassword ? 'text' : 'password'" name="password" id="password"
+                            placeholder="Contraseña" class="form-control" required [(ngModel)]="password"
+                            pattern="^(?=.*[a-z])(?=.*[A-Z])(?=.*\d).{8,}$" #passwordInput="ngModel">
+                        <label for="password"><span class="text-danger">*</span>Contraseña actual:</label>
+                        <button type="button" class="btn position-absolute top-50 end-0 translate-middle-y"
+                            (click)="mostrarPasswordFuntion()" style="border: none; background: transparent;">
+                            <mat-icon>{{ mostrarPassword ? 'visibility' : 'visibility_off' }}</mat-icon>
+                        </button>
+                    </div>
+                    <small id="mensajeErrorTexto" class="form-text text-danger"
+                        [style.display]="(passwordInput.invalid && passwordInput.touched) ? 'block' : 'none'">
+                        Ingresar al menos 8 caracteres, que incluya al menos una letra mayúscula y números.</small>
+                </div>
+                <div class="mt-3 mb-3">
+                    <div class="form-floating position-relative">
+                        <input [type]="mostrarNewPassword ? 'text' : 'password'" name="newPassword" id="newPassword"
+                            placeholder="Nueva contraseña" class="form-control" required [(ngModel)]="newPassword"
+                            pattern="^(?=.*[a-z])(?=.*[A-Z])(?=.*\d).{8,}$" #newPasswordInput="ngModel">
+                        <label for="newPassword"><span class="text-danger">*</span>Nueva contraseña:</label>
+                        <button type="button" class="btn position-absolute top-50 end-0 translate-middle-y"
+                            (click)="mostrarNewPasswordFuntion()" style="border: none; background: transparent;">
+                            <mat-icon>{{ mostrarNewPassword ? 'visibility' : 'visibility_off' }}</mat-icon>
+                        </button>
+                    </div>
+                    <small id="mensajeErrorTexto" class="form-text text-danger"
+                        [style.display]="(newPasswordInput.invalid && newPasswordInput.touched) ? 'block' : 'none'">
+                        Ingresar al menos 8 caracteres, que incluya al menos una letra mayúscula y números.</small>
+                </div>
+                <div class="mt-3 mb-3">
+                    <div class="form-floating position-relative">
+                        <input type="{{ mostrarPasswordConfirmada ? 'text' : 'password' }}" name="confirmarPassword"
+                            id="confirmarPassword" placeholder="Confirmar contraseña" class="form-control" required
+                            [(ngModel)]="confirmarPassword">
+                        <label for="confirmarPassword"><span class="text-danger">*</span>Confirmar su nueva
+                            contraseña:</label>
+                        <button type="button" class="btn position-absolute top-50 end-0 translate-middle-y"
+                            (click)="mostrarPasswordConfirmadaFuntion()" style="border: none; background: transparent;">
+                            <mat-icon>{{ mostrarPasswordConfirmada ? 'visibility' : 'visibility_off' }}</mat-icon>
+                        </button>
+                    </div>
+                    <small id="mensajeErrorPassword" class="form-text text-danger"
+                        *ngIf="newPassword !== confirmarPassword">Las nuevas contraseñas no coinciden.</small>
+                </div>
+                <div class="d-grid gap-2 mb-5">
+                    <button type="submit" mat-raised-button color="primary" id="botonCrearCuenta">
+                        <mat-icon>lock_open</mat-icon>ACTUALIZAR CONTRASEÑA</button>
+                </div>
+            </form>
         </div>
-        <form #usuarioForm="ngForm" (ngSubmit)="actualizarContrasenia(usuarioForm)">
-            <div class="form-floating mt-4 mb-3">
-                <input type="email" id="email" name="email" placeholder="Correo electrónico" class="form-control"
-                    required pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}" [(ngModel)]="email"
-                    #emailInput="ngModel">
-                <label for="email"><span class="text-danger">*</span>Correo electrónico:</label>
-                <small id="mensajeErrorCelular" class="form-text text-danger"
-                    [style.display]="(emailInput.invalid && emailInput.touched) ? 'block' : 'none'">
-                    Ingrese un correo electrónico válido (ejemplo@email.com).</small>
-            </div>
-            <div class="mt-3 mb-3">
-                <div class="form-floating position-relative">
-                    <input [type]="mostrarPassword ? 'text' : 'password'" name="password" id="password"
-                        placeholder="Contraseña" class="form-control" required [(ngModel)]="password"
-                        pattern="^(?=.*[a-z])(?=.*[A-Z])(?=.*\d).{8,}$" #passwordInput="ngModel">
-                    <label for="password"><span class="text-danger">*</span>Contraseña actual:</label>
-                    <button type="button" class="btn position-absolute top-50 end-0 translate-middle-y"
-                        (click)="mostrarPasswordFuntion()" style="border: none; background: transparent;">
-                        <mat-icon>{{ mostrarPassword ? 'visibility' : 'visibility_off' }}</mat-icon>
-                    </button>
-                </div>
-                <small id="mensajeErrorTexto" class="form-text text-danger"
-                    [style.display]="(passwordInput.invalid && passwordInput.touched) ? 'block' : 'none'">
-                    Ingresar al menos 8 caracteres, que incluya al menos una letra mayúscula y números.</small>
-            </div>
-            <div class="mt-3 mb-3">
-                <div class="form-floating position-relative">
-                    <input [type]="mostrarNewPassword ? 'text' : 'password'" name="newPassword" id="newPassword"
-                        placeholder="Nueva contraseña" class="form-control" required [(ngModel)]="newPassword"
-                        pattern="^(?=.*[a-z])(?=.*[A-Z])(?=.*\d).{8,}$" #newPasswordInput="ngModel">
-                    <label for="newPassword"><span class="text-danger">*</span>Nueva contraseña:</label>
-                    <button type="button" class="btn position-absolute top-50 end-0 translate-middle-y"
-                        (click)="mostrarNewPasswordFuntion()" style="border: none; background: transparent;">
-                        <mat-icon>{{ mostrarNewPassword ? 'visibility' : 'visibility_off' }}</mat-icon>
-                    </button>
-                </div>
-                <small id="mensajeErrorTexto" class="form-text text-danger"
-                    [style.display]="(newPasswordInput.invalid && newPasswordInput.touched) ? 'block' : 'none'">
-                    Ingresar al menos 8 caracteres, que incluya al menos una letra mayúscula y números.</small>
-            </div>
-            <div class="mt-3 mb-3">
-                <div class="form-floating position-relative">
-                    <input type="{{ mostrarPasswordConfirmada ? 'text' : 'password' }}" name="confirmarPassword"
-                        id="confirmarPassword" placeholder="Confirmar contraseña" class="form-control" required
-                        [(ngModel)]="confirmarPassword">
-                    <label for="confirmarPassword"><span class="text-danger">*</span>Confirmar su nueva
-                        contraseña:</label>
-                    <button type="button" class="btn position-absolute top-50 end-0 translate-middle-y"
-                        (click)="mostrarPasswordConfirmadaFuntion()" style="border: none; background: transparent;">
-                        <mat-icon>{{ mostrarPasswordConfirmada ? 'visibility' : 'visibility_off' }}</mat-icon>
-                    </button>
-                </div>
-                <small id="mensajeErrorPassword" class="form-text text-danger"
-                    *ngIf="newPassword !== confirmarPassword">Las nuevas contraseñas no coinciden.</small>
-            </div>
-            <div class="d-grid gap-2 mb-5">
-                <button type="submit" mat-raised-button color="primary" id="botonCrearCuenta">
-                    <mat-icon>lock_open</mat-icon>ACTUALIZAR CONTRASEÑA</button>
-            </div>
-            <div class="iconsAtrasSiguiente">
-                <button mat-mini-fab color="primary" (click)="regresar()" matTooltip="Atrás">
-                    <mat-icon>arrow_back</mat-icon>
-                </button>
-            </div>
-        </form>
     </div>
 </div>
