--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,15 @@
-<app-header></app-header>
-<router-outlet style="margin-top: 90px;"></router-outlet>
-<div class="return-top default">
-    <button mat-icon-button (click)="volverArriba()"  matTooltip="Volver arriba">
+<div class="page-container">
+  <app-header></app-header>
+
+  <div class="content-wrap">
+    <router-outlet style="margin-top: 90px;"></router-outlet>
+
+    <div class="return-top default">
+      <button mat-icon-button (click)="volverArriba()" matTooltip="Volver arriba">
         <mat-icon class="fw-bold">vertical_align_top</mat-icon>
-    </button>
+      </button>
+    </div>
+  </div>
+
+  <app-footer></app-footer>
 </div>
-<app-footer></app-footer>
