--- a/src/app/components/buscar-repuesto/buscar-repuesto.component.html
+++ b/src/app/components/buscar-repuesto/buscar-repuesto.component.html
@@ -1,121 +1,136 @@
 <div class="return">
-    <button (click)="retornar()" mat-icon-button>
+    <button (click)="retornar()" mat-icon-button matTooltip="Regresar atrás">
         <mat-icon class="fw-bold">arrow_back</mat-icon>
     </button>
 </div>
-<div class="container" style="justify-content: space-between;">
-    <div class="row row-cols-1 row-cols-lg-3 w-100">
-        <div class="col-lg-3 ">
-            <div class="categorias">
-                <div class="titulo d-block" style="background-color: #F2F2F2;">
-                    <span class="w-100 m-0 text-center"><i class="bi bi-car-front-fill"></i> FILTRO DE BÚSQUEDA</span><br>
+<div class="container-fluid catalogue-filtered-container mt-4">
+    <div class="row g-4">
+        <div class="col-lg-3">
+            <div class="filters-section p-3">
+                <div class="section-title text-center mb-3">
+                    <h5 class="fw-bold m-0"><i class="bi bi-car-front-fill me-2"></i> FILTRO DE BÚSQUEDA</h5>
                 </div>
-                <form class="card p-2 mt-1" style="background-color: #F2F2F2;">
-                    <select class="form-select p-3" name="categoria" [ngModel]="selectedCategory"
+                <form class="filters-form card p-3 mt-2 shadow-sm">
+                    <select class="form-select mb-3 custom-select" name="categoria" [ngModel]="selectedCategory"
                         (change)="cambiarCategoria($event)"
-                        [ngStyle]="{'color': (categoria.value ? 'black' : 'rgb(150, 150, 150)')}" #categoria>
-                        <option style="color: rgb(150, 150, 150);" value="" selected>Seleccione el categoría</option>
-                        <option style="color: black" *ngFor="let categoria of categorias" [value]="categoria.name">{{
-                            categoria.name }}
-                        </option>
+                        [ngClass]="{'placeholder-color': !categoria.value}" #categoria
+                        aria-label="Seleccione la categoría">
+                        <option value="" disabled selected>Seleccione la categoría</option>
+                        <option class="text-dark" *ngFor="let cat of categorias" [value]="cat.name">{{ cat.name }}</option>
                     </select>
-                    <select class="form-select p-3 mt-2" name="brand" (change)="cambiarMarca($event)"
-                        [ngModel]="selectedBrand" [ngStyle]="{'color': (brand.value ? 'black' : 'rgb(150, 150, 150)')}"
-                        #brand>
-                        <option style="color: rgb(150, 150, 150);" value="" selected>Seleccione la marca</option>
-                        <option style="color: black" *ngFor="let marca of marcas" [value]="marca.name">{{
-                            marca.name }}
-                        </option>
+
+                    <select class="form-select  custom-select" name="brand" (change)="cambiarMarca($event)"
+                        [ngModel]="selectedBrand" [ngClass]="{'placeholder-color': !brand.value}" #brand
+                        aria-label="Seleccione la marca">
+                        <option value="" disabled selected>Seleccione la marca</option>
+                        <option class="text-dark" *ngFor="let marca of marcas" [value]="marca.name">{{ marca.name }}</option>
                     </select>
-                    <select *ngIf="modelos.length > 0" class="form-select p-3 mt-2" name="brandModel"
+
+                    <select *ngIf="modelos.length > 0" class="form-select mt-3 custom-select" name="brandModel"
                         (change)="cambiarModelo($event)" [ngModel]="selectedModel"
-                        [ngStyle]="{'color': (brandModel.value ? 'black' : 'rgb(150, 150, 150)')}" #brandModel>
-                        <option style="color: rgb(150, 150, 150);" value="" selected>Seleccione el modelo</option>
-                        <option style="color: black" *ngFor="let modelo of modelos" [value]="modelo.name">{{
-                            modelo.name }}
-                        </option>
+                        [ngClass]="{'placeholder-color': !brandModel.value}" #brandModel
+                        aria-label="Seleccione el modelo">
+                        <option value="" disabled selected>Seleccione el modelo</option>
+                        <option class="text-dark" *ngFor="let modelo of modelos" [value]="modelo.name">{{ modelo.name }}</option>
                     </select>
-                    <select *ngIf="tipos.length > 0" class="form-select p-3 mt-2" name="modelType"
+
+                    <select *ngIf="tipos.length > 0" class="form-select mt-3 custom-select" name="modelType"
                         (change)="cambiarTipo($event)" [ngModel]="selectedModelType"
-                        [ngStyle]="{'color': (modelType.value ? 'black' : 'rgb(150, 150, 150)')}" #modelType>
-                        <option style="color: rgb(150, 150, 150);" value="" selected>Seleccione el tipo</option>
-                        <option style="color: black" *ngFor="let tipo of tipos" [value]="tipo.name">{{
-                            tipo.name }}
-                        </option>
+                        [ngClass]="{'placeholder-color': !modelType.value}" #modelType
+                        aria-label="Seleccione el tipo de modelo">
+                        <option value="" disabled selected>Seleccione el tipo</option>
+                        <option class="text-dark" *ngFor="let tipo of tipos" [value]="tipo.name">{{ tipo.name }}</option>
                     </select>
-                    <select *ngIf="anios.length > 0" class="form-select p-3 mt-2" name="anio" [ngModel]="selectedYear"
-                        (change)="cambiarAnio($event)" [ngModel]="selectedYear"
-                        [ngStyle]="{'color': (anio.value ? 'black' : 'rgb(150, 150, 150)')}" #anio>
-                        <option style="color: rgb(150, 150, 150);" value="" selected>Seleccione el año</option>
-                        <option style="color: black" *ngFor="let anio of anios" [value]="anio">{{
-                            anio }}
-                        </option>
+
+                    <select *ngIf="anios.length > 0" class="form-select custom-select mt-3" name="anio"
+                        [ngModel]="selectedYear" (change)="cambiarAnio($event)"
+                        [ngClass]="{'placeholder-color': !anio.value}" #anio
+                        aria-label="Seleccione el año">
+                        <option value="" disabled selected>Seleccione el año</option>
+                        <option class="text-dark" *ngFor="let anio of anios" [value]="anio">{{ anio }}</option>
                     </select>
                 </form>
             </div>
         </div>
+
         <div class="col-lg-9">
-            <div class="titulo gap-1">
-                <mat-icon>pageview</mat-icon>
-                <span class="m-0">RESULTADOS:</span>
-            </div>
-            <ng-container *ngIf="!cargando; else spinnerCargando">
-                <div class="row row-cols-1 row-cols-lg-2 row-cols-xl-3 row-cols-xxl-4">
-                    <ng-container *ngIf="repuestos.length > 0; else noRepuestos">
-                        <ng-container *ngFor="let repuesto of repuestosPorPagina; let i = index">
-                            <div class="col py-1">
-                                <div class="card text-center">
-                                    <a href="/repuesto/{{repuesto.code}}">
-                                        <img class="imagenRepuesto" src="{{repuesto.images?.[0]}}" alt="">
-                                        <p class="card-text" style="color: rgb(180, 0, 0);">Código: {{repuesto.code}}
-                                        </p>
-                                        <h2 class="card-title fw-bold">{{repuesto.name}}</h2>
-                                        <p class="marca-vhc card-text">
-                                            <a href="/spare-part?category={{repuesto.category}}">Categoría:
-                                                {{repuesto.category}}</a>
-                                        </p>
-                                        <p class="marca-vhc card-text">
-                                            <a href="/spare-part?brand={{repuesto.brand}}"
-                                                style="color: rgb(204, 0, 0);">Marca VHC:
-                                                {{repuesto.brand}}</a>
-                                        </p>
-                                        <div class="card-text" style="display: flex; justify-content: center; ">
-                                            <div style="display: flex; align-items: center;">
-                                                <h4 style="color: #3f51b5;" class="fw-bold">Precio: ${{repuesto.price}}
+            <div class="results-section">
+                <div class="section-title text-center mb-3">
+                    <h5 class="fw-bold m-0"><mat-icon class="me-2">pageview</mat-icon> RESULTADOS</h5>
+                </div>
+
+                <ng-container *ngIf="!cargando; else spinnerCargando">
+                    <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-4">
+                        <ng-container *ngIf="repuestos.length > 0; else noRepuestos">
+                            <ng-container *ngFor="let repuesto of repuestosPorPagina; let i = index">
+                                <div class="col d-flex">
+                                    <div class="card product-card shadow-sm w-100 d-flex flex-column">
+                                        <a href="/repuesto/{{repuesto.code}}"
+                                            class="product-link d-block text-decoration-none text-dark flex-grow-1">
+                                            <div class="product-image-container">
+                                                <img class="card-img-top product-image"
+                                                    [src]="repuesto.images?.[0] || 'assets/placeholder.jpg'"
+                                                    [alt]="'Imagen de ' + repuesto.name">
+                                            </div>
+                                            <div class="card-body d-flex flex-column justify-content-between p-3">
+                                                <p class="product-code mb-1">CÓDIGO: {{repuesto.code}}</p>
+                                                <h5 class="card-title product-name fw-bold mb-2">{{repuesto.name}}</h5>
+                                                <p class="product-category mb-1">
+                                                    <a href="/spare-part?category={{repuesto.category}}"
+                                                        class="text-decoration-none small">Categoría:
+                                                        {{repuesto.category}}</a>
+                                                </p>
+                                                <p class="product-brand mb-2">
+                                                    <a href="/spare-part?brand={{repuesto.brand}}"
+                                                        class="text-decoration-none small">Marca VHC:
+                                                        {{repuesto.brand}}</a>
+                                                </p>
+                                                <h4 class="product-price fw-bold mt-2">
+                                                    <span>Precio: ${{repuesto.price | number:'1.2-2'}}</span>
                                                 </h4>
                                             </div>
+                                        </a>
+                                        <div class="border-0 mt-0 mb-3 mx-3">
+                                            <button class="btn add-to-cart-btn w-100" type="button" mat-raised-button
+                                                [color]="!isAdded[i] ? 'primary' : 'link'" (click)="agregarAlCarrito(repuesto, i)"
+                                                [disabled]="isAddingToCart[i] || isAdded[i]">
+                                                <span *ngIf="!isAdded[i] && !isAddingToCart[i]">
+                                                    <i class="bi bi-cart-plus-fill me-2"></i> Agregar al carrito
+                                                </span>
+                                                <span *ngIf="isAddingToCart[i]">
+                                                    <span class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>
+                                                    Agregando...
+                                                </span>
+                                                <span *ngIf="isAdded[i]">
+                                                    <i class="bi bi-cart-check-fill me-2"></i> Añadido!
+                                                </span>
+                                            </button>
                                         </div>
-                                    </a>
-                                    <div class="card-body">
-                                        <button class="w-100" type="button" mat-raised-button
-                                            [color]="!isAdded[i] ? 'primary' : 'link'"
-                                            (click)="agregarAlCarrito(repuesto, i)">
-                                            <div *ngIf="!isAdded[i]">
-                                                <i class="bi bi-cart-plus-fill"></i> Agregar al carrito
-                                            </div>
-                                            <div>
-                                                <i style="font-size: 23px;" *ngIf="isAdded[i]"
-                                                    class="bi bi-cart-check-fill text-success"></i>
-                                            </div>
-                                        </button>
                                     </div>
                                 </div>
-                            </div>
+                            </ng-container>
                         </ng-container>
-                    </ng-container>
-                    <ng-template #noRepuestos>
-                        <h3 class="w-100 text-center mt-4">No hay repuestos disponibles</h3>
-                    </ng-template>
-                </div>
-            </ng-container>
-            <ng-template #spinnerCargando>
-                <div class="d-flex justify-content-center align-items-center" style="height: 65vh;">
-                    <mat-spinner></mat-spinner>
-                </div>
-            </ng-template>
-            <mat-paginator class="custom-paginator" [hidePageSize]="true" [length]="cantidadRepuestos"
-                [pageSize]="tamanioPagina" (page)="cambiarPagina($event)">
-            </mat-paginator>
+                        <ng-template #noRepuestos>
+                            <div class="col-12 w-100">
+                                <h3 class="text-center mt-5 text-muted">No se encontraron repuestos con los filtros
+                                    aplicados.</h3>
+                            </div>
+                        </ng-template>
+                    </div>
+                </ng-container>
+
+                <ng-template #spinnerCargando>
+                    <div class="d-flex justify-content-center align-items-center py-5" style="min-height: 40vh;">
+                        <mat-spinner [diameter]="50"></mat-spinner>
+                        <p class="ms-3 text-muted">Cargando repuestos...</p>
+                    </div>
+                </ng-template>
+
+                <mat-paginator class="custom-paginator mt-4" [hidePageSize]="true" [length]="cantidadRepuestos"
+                    [pageSize]="tamanioPagina" (page)="cambiarPagina($event)"
+                    aria-label="Seleccionar página de repuestos">
+                </mat-paginator>
+            </div>
         </div>
     </div>
 </div>
