--- a/src/app/components/categorias/create-categoria/create-categoria.component.html
+++ b/src/app/components/categorias/create-categoria/create-categoria.component.html
@@ -4,8 +4,7 @@
     </button>
 </div>
 <div class="container">
-    <div class="form" style="background-color: rgb(247, 255, 238); padding: 20px;
-    border-bottom: 1px solid #eeeeee;box-shadow: 2px 2px 2px 2px #f5f5f5;">
+    <div class="form">
         <form (ngSubmit)="onSubmit(categoriaForm)" #categoriaForm="ngForm">
             <div class="form-container">
                 <h1 class="text-center">{{titulo}}</h1>
