--- a/src/app/components/detalle-carrito/detalle-carrito.component.css
+++ b/src/app/components/detalle-carrito/detalle-carrito.component.css
@@ -1,10 +1,34 @@
 .container {
   text-align: start;
-  max-width: 1100px !important;
+  max-width: 1350px !important;
 }
 
 @media print {
   .no-print {
     display: none;
   }
+}
+
+.tab-content .table-custom {
+    width: 100% !important;
+}
+
+.titulo {
+  margin-bottom: -12px;
+}
+
+.button-container {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 1rem;
+}
+
+.button-container button {
+    flex: 1 1 calc(33.33% - 1rem);
+}
+
+@media (max-width: 767px) {
+    .button-container button {
+        flex: 1 1 100%;
+    }
 }
