--- a/src/app/components/footer/footer.component.css
+++ b/src/app/components/footer/footer.component.css
@@ -1,12 +1,11 @@
 .footer {
-    position: relative;
-    color: white;
-    width: 100%;
-    height: 50px;
-    margin-top: 70px;
-    top: 0;
-    background-color: rgb(0, 0, 0);
-    border-top: 1px solid #eeeeee;
-    box-shadow: 0 0 0 0 #f5f5f5;
-    font-size: 18px;
+  height: 40px;
+  width: 100%;
+  background-color: rgb(0, 0, 0);
+  color: white;
+  border-top: 1px solid #eeeeee;
+  font-size: 14px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
