--- a/src/app/components/home/home.component.css
+++ b/src/app/components/home/home.component.css
@@ -1,20 +1,115 @@
 .container {
-    text-align: start;
-    max-width: 1150px !important;
-    margin-top: 0px !important;
+  text-align: start;
+  max-width: 1350px !important;
+  margin-top: 0px !important;
 }
-.carousel {
-    z-index: 200;
+
+.home-banner {
+  position: relative;
+  width: 100%;
+  height: calc(100vh - 100px);
+  background-image: url('/assets/img/hero-banner.png');
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  max-width: 1300px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  padding: 0 1rem;
+  margin-top: 150px;
+  box-sizing: border-box;
+  margin: 70px auto 0;
+
 }
-.carousel-item img {
+
+.home-content {
+  background-color: rgba(0, 0, 0, 0.4);
+  padding: 2rem;
+  border-radius: 10px;
+  max-width: 700px;
+  width: 100%;
+  color: #fff;
+  text-align: center;
+  animation: fadeInUp 1.5s ease-out;
+}
+
+.home-content h1 {
+  font-size: clamp(1.8rem, 5vw, 2.5rem);
+  font-weight: bold;
+  line-height: 1.2;
+}
+
+.home-content p {
+  font-size: clamp(1rem, 2.5vw, 1.2rem);
+  margin-top: 1rem;
+}
+
+.cta-button {
+  margin-top: 1.5rem;
+  width: 100%;
+  max-width: 250px;
+  font-size: 1rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 0.5rem;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+@media (max-width: 500px) {
+  .home-banner {
+    height: auto;
+    /* Permite que el contenido determine la altura */
+    padding: 2rem 1rem;
+    background-size: cover;
+    /* Asegura que la imagen llene el fondo */
+    background-position: center;
+    margin-top: 90px;
+  }
+
+  .home-content {
+    padding: 1rem;
+    max-width: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    /* Un poco más oscura para mejorar contraste */
+  }
+
+  .home-content h1 {
+    font-size: 1.4rem;
+  }
+
+  .home-content p {
+    font-size: 0.9rem;
+  }
+
+  .cta-button {
+    font-size: 0.9rem;
     width: 100%;
-    margin-top: 20px;
-    height: 97vh;
-    object-fit: cover;
+    max-width: 220px;
+    padding: 0.6rem 1rem;
+  }
 }
-@media (max-width: 992px) {
-    .carousel-item img {
-        height: auto;
-        margin-top: 40px;
-    }
+
+@media (min-width: 1600px) {
+  .home-banner {
+    background-size: cover;
+    margin-left: auto;
+    margin-right: auto;
+  }
+}
+
+
+@keyframes fadeInUp {
+  from {
+    opacity: 0;
+    transform: translateY(40px);
+  }
+
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
 }
