--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,45 +1,15 @@
-<div id="carouselExampleAutoplaying" class="carousel slide carousel-fade" data-bs-ride="carousel">
-    <div class="carousel-indicators">
-        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"
-            aria-current="true" aria-label="Slide 1"></button>
-        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
-            aria-label="Slide 2"></button>
-        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
-            aria-label="Slide 3"></button>
-        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3"
-            aria-label="Slide 4"></button>
-        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="4"
-            aria-label="Slide 4"></button>
-    </div>
-    <div class="carousel-inner">
+<section class="home-banner">
+  <div class="home-content">
+    <h1 class="display-4 fw-bold text-white">Encuentra los mejores repuestos</h1>
+    <p class="lead">Repuestos de calidad y pago fácil al instante.</p>
 
-        <div class="carousel-item active">
-            <img src="../../../assets/img/slide1.jpg" class="d-block w-100">
-        </div>
-        <div class="carousel-item">
-            <img src="../../../assets/img/slide2.jpg" class="d-block w-100">
-        </div>
-        <div class="carousel-item">
-            <img src="../../../assets/img/slide3.jpg" class="d-block w-100">
-        </div>
-        <div class="carousel-item">
-            <img src="../../../assets/img/slide4.jpg" class="d-block w-100">
-        </div>
-        <div class="carousel-item">
-            <img src="../../../assets/img/slide5.jpg" class="d-block w-100">
-        </div>
-    </div>
-    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying"
-        data-bs-slide="prev">
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Previous</span>
+    <button mat-raised-button color="primary" class="cta-button" routerLink="/spare-part">
+      <mat-icon>arrow_forward</mat-icon>
+      Ver catálogo
     </button>
-    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying"
-        data-bs-slide="next">
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Next</span>
-    </button>
-</div>
-<div class="container" style="margin-top: 0px;">
-    <app-catalogo-repuestos></app-catalogo-repuestos>
+  </div>
+</section>
+
+<div class="container">
+  <app-catalogo-repuestos></app-catalogo-repuestos>
 </div>
