--- a/src/app/components/pago-finalizado/pago-finalizado.component.html
+++ b/src/app/components/pago-finalizado/pago-finalizado.component.html
@@ -1,5 +1,5 @@
 <div class="verificacion-pendiente">
     <h1>GRACIAS POR TU COMPRA</h1>
-    <p>¡ Esperamos que disfrutes de tus nuevos productos!</p>
+    <p>¡ Esperamos que disfrutes de tus nuevos repuestos!</p>
     <app-spinner class="mt-5"></app-spinner>
 </div>
