--- a/src/app/components/repuestos/repuestos.component.html
+++ b/src/app/components/repuestos/repuestos.component.html
@@ -1,99 +1,120 @@
-<div style="display: flex; justify-content: flex-end; align-items: center; position: absolute; right: 0;">
-    <a mat-mini-fab color="primary" matTooltip="Agregar un nuevo repuesto" matTooltipPosition="right"
-        href="/create-repuesto">
-        <mat-icon>add</mat-icon>
-    </a>
-</div>
-<div class="container-fluid mt-3" style="width: 100%;">
-    <ul class="nav nav-tabs w-100" id="myTabs">
-        <li class="nav-item">
-            <button class="nav-link active" id="datosPrimarios-tab" data-bs-toggle="tab"
-                data-bs-target="#datosPrimarios" role="tab" aria-controls="datosPrimarios" aria-selected="true">Datos
-                primarios</button>
-        </li>
-        <li class="nav-item">
-            <button class="nav-link" id="datosDescriptivos-tab" data-bs-toggle="tab" data-bs-target="#datosDescriptivos"
-                role="tab" aria-controls="datosDescriptivos" aria-selected="false">Datos descriptivos</button>
-        </li>
+  <div class="d-flex justify-content-between align-items-center my-2">
+    <ul class="nav nav-tabs" style="margin: 0; white-space: nowrap;">
+      <li class="nav-item" role="presentation">
+        <button class="nav-link active" id="datosPrimarios-tab" data-bs-toggle="tab" data-bs-target="#datosPrimarios"
+          role="tab" aria-controls="datosPrimarios" aria-selected="true" type="button">
+          Datos primarios
+        </button>
+      </li>
+      <li class="nav-item" role="presentation">
+        <button class="nav-link" id="datosDescriptivos-tab" data-bs-toggle="tab" data-bs-target="#datosDescriptivos"
+          role="tab" aria-controls="datosDescriptivos" aria-selected="false" type="button">
+          Datos descriptivos
+        </button>
+      </li>
     </ul>
-    <div class="tab-content">
-        <div class="tab-pane fade show active" id="datosPrimarios" role="tabpanel" aria-labelledby="datosPrimarios-tab">
-            <table class="table table-hover">
-                <thead>
-                    <tr>
-                        <th scope="col"></th>
-                        <th scope="col"></th>
-                        <th scope="col">Código</th>
-                        <th scope="col">Nombre</th>
-                        <th scope="col">Precio</th>
-                        <th scope="col">Stock</th>
-                        <th scope="col">Categoría</th>
-                        <th scope="col">Fecha de creación</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr *ngFor="let r of repuestos">
-                        <td>
-                            <a style="margin: -10px;" mat-icon-button color="primary" href="edit-repuesto/{{r.code}}"
-                                matTooltip="Editar el repuesto '{{r.name}}'" matTooltipPosition="right">
-                                <mat-icon>edit</mat-icon>
-                            </a>
-                        </td>
-                        <td>
-                            <button style="margin: -10px;" mat-icon-button color="warn"
-                                (click)="comprobarStock(r._id, r.stock, r.name)"
-                                matTooltip="Eliminar el repuesto '{{r.name}}'" matTooltipPosition="right">
-                                <mat-icon>delete</mat-icon>
-                            </button>
-                        </td>
-                        <td>{{ r.code }}</td>
-                        <td>{{ r.name }}</td>
-                        <td>${{ r.price }}</td>
-                        <td>{{ r.stock }}</td>
-                        <td>{{ r.category }}</td>
-                        <td>{{ r.createdAt | date:'yyyy-MM-dd HH:mm'}}</td>
-                    </tr>
-                </tbody>
-            </table>
-        </div>
-        <div class="tab-pane fade" id="datosDescriptivos" role="tabpanel" aria-labelledby="datosDescriptivos-tab">
-            <table class="table table-hover">
-                <thead>
-                    <tr>
-                        <th scope="col"></th>
-                        <th scope="col"></th>
-                        <th scope="col">Código</th>
-                        <th scope="col">Nombre</th>
-                        <th scope="col">Marca</th>
-                        <th scope="col">Modelo</th>
-                        <th scope="col">Tipo</th>
-                        <th scope="col">Año</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr *ngFor="let r of repuestos">
-                        <td>
-                            <a style="margin: -10px;" mat-icon-button color="primary" href="edit-repuesto/{{r.code}}"
-                                matTooltip="Editar el repuesto '{{r.name}}'" matTooltipPosition="right">
-                                <mat-icon>edit</mat-icon>
-                            </a>
-                        </td>
-                        <td>
-                            <button style="margin: -10px;" mat-icon-button color="warn"
-                                (click)="comprobarStock(r._id, r.stock, r.name)"
-                                matTooltip="Eliminar el repuesto '{{r.name}}'" matTooltipPosition="right">
-                                <mat-icon>delete</mat-icon>
-                            </button>
-                        </td>
-                        <td>{{ r.code }}</td>
-                        <td>{{ r.name }}</td>
-                        <td>{{ r.brand }}</td>
-                        <td>{{ r.brandModel }}</td>
-                        <td>{{ r.modelType }}</td>
-                        <td>{{ r.modelTypeYear }}</td>
-                    </tr>
-                </tbody>
-            </table>
-        </div>
+    <a class="position-absolute top-0 end-0 me-2 mt-3" style="z-index: 10;" mat-mini-fab color="primary"
+      matTooltip="Agregar un nuevo repuesto" matTooltipPosition="above" href="/create-repuesto"
+      aria-label="Agregar un nuevo repuesto">
+      <mat-icon>add</mat-icon>
+    </a>
+  </div>
+
+
+
+  <div class="tab-content mt-1">
+    <div class="tab-pane fade show active" id="datosPrimarios" role="tabpanel" aria-labelledby="datosPrimarios-tab">
+      <div class="table-responsive">
+        <table class="table table-hover align-middle table-custom">
+          <thead>
+            <tr>
+              <th class="text-center" scope="col" style="min-width: 120px;">Código</th>
+              <th scope="col" style="min-width: 300px;">Nombre</th>
+              <th class="text-end" scope="col" style="min-width: 100px;">Precio</th>
+              <th class="text-center" scope="col" style="min-width: 110px;">Stock</th>
+              <th scope="col" style="min-width: 170px;">Categoría</th>
+              <th scope="col" style="min-width: 190px;">Fecha de creación</th>
+              <th class="text-center" scope="col" style="min-width: 50px;">Acciones</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr *ngFor="let r of repuestosPorPagina">
+              <td class="text-center">{{ r.code }}</td>
+              <td>{{ r.name }}</td>
+              <td class="text-end">${{ r.price | number: '1.2-2' }}</td>
+              <td class="text-center">
+                <span *ngIf="(r.stock ?? 0) <= 10" class="btn-rol btn-rol-low-stock">
+                  {{ r.stock }}
+                </span>
+                <span *ngIf="(r.stock ?? 0) > 10" class="btn-rol btn-rol-hight-stock">
+                  {{ r.stock }}
+                </span>
+              </td>
+
+              <td>{{ r.category }}</td>
+              <td>{{ r.createdAt | date: 'yyyy-MM-dd HH:mm' }}</td>
+              <td style="display: flex; align-items: center; gap: 8px;">
+                <a mat-icon-button color="primary" href="edit-repuesto/{{ r.code }}"
+                  matTooltip="Editar el repuesto '{{ r.name }}'" matTooltipPosition="above"
+                  [attr.aria-label]="'Editar el repuesto ' + r.name">
+                  <mat-icon>edit</mat-icon>
+                </a>
+                <button mat-icon-button color="warn" (click)="comprobarStock(r._id, r.stock, r.name)"
+                  matTooltip="Eliminar el repuesto '{{ r.name }}'" matTooltipPosition="above"
+                  [attr.aria-label]="'Eliminar el repuesto ' + r.name">
+                  <mat-icon>delete</mat-icon>
+                </button>
+              </td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
     </div>
-</div>
+
+    <!-- Datos descriptivos -->
+    <div class="tab-pane fade" id="datosDescriptivos" role="tabpanel" aria-labelledby="datosDescriptivos-tab">
+      <div class="table-responsive">
+        <table class="table table-hover align-middle table-custom">
+          <thead>
+            <tr>
+              <th class="text-center" scope="col" style="min-width: 120px;">Código</th>
+              <th scope="col" style="min-width: 300px;">Nombre</th>
+              <th scope="col" style="min-width: 160px;">Marca</th>
+              <th scope="col" style="min-width: 200px;">Modelo</th>
+              <th scope="col" style="min-width: 90px;">Tipo</th>
+              <th class="text-center" scope="col" style="min-width: 100px;">Año</th>
+              <th class="text-center" scope="col" style="min-width: 40px;">Acciones</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr *ngFor="let r of repuestosPorPagina">
+              <td>{{ r.code }}</td>
+              <td>{{ r.name }}</td>
+              <td>{{ r.brand }}</td>
+              <td>{{ r.brandModel }}</td>
+              <td>{{ r.modelType }}</td>
+              <td class="text-center">{{ r.modelTypeYear }}</td>
+              <td style="display: flex; align-items: center; gap: 8px;">
+                <a mat-icon-button color="primary" href="edit-repuesto/{{ r.code }}"
+                  matTooltip="Editar el repuesto '{{ r.name }}'" matTooltipPosition="above"
+                  [attr.aria-label]="'Editar el repuesto ' + r.name">
+                  <mat-icon>edit</mat-icon>
+                </a>
+                <button mat-icon-button color="warn" (click)="comprobarStock(r._id, r.stock, r.name)"
+                  matTooltip="Eliminar el repuesto '{{ r.name }}'" matTooltipPosition="above"
+                  [attr.aria-label]="'Eliminar el repuesto ' + r.name">
+                  <mat-icon>delete</mat-icon>
+                </button>
+              </td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
+    </div>
+  </div>
+
+  <!-- Paginador -->
+  <mat-paginator *ngIf="cantidadRepuestos > tamanioPagina" class="custom-paginator w-100" [hidePageSize]="true"
+    [length]="cantidadRepuestos" [pageSize]="tamanioPagina" (page)="cambiarPagina($event)"
+    aria-label="Paginador de repuestos">
+  </mat-paginator>
