--- a/src/styles.css
+++ b/src/styles.css
@@ -6,25 +6,30 @@
 
 html,
 body {
-    height: auto;
     font-family: "Varela Round", Sans-serif !important;
     font-weight: 400;
     font-style: normal;
+    padding-bottom: 40px;
+    height: 100vh;
 }
+
+h1 {
+        color: #0574A1;
+        margin-bottom: 30px;
+    }
 
 a {
     text-decoration: none;
     color: black;
 }
 
-.return-top,
-.return {
+.return-top {
     background-color: black;
     color: #fff;
     text-align: center;
     position: fixed;
-    bottom: 30px;
-    right: 26px;
+    bottom: 45px !important;
+    right: 20px;
     z-index: 1000;
     width: 50px;
     height: 50px;
@@ -32,19 +37,38 @@ a {
 }
 
 .return {
+    color: rgb(255, 255, 255);
+    background-color: #0574A1;
+    border: 1px solid #e0e0e0;
+    box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+    text-align: center;
+    position: fixed;
+    top: 80px !important;
+    right: 20px;
+    z-index: 1000;
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
     left: 26px;
 }
 
+@media (max-width: 767px) {
+    .return-top,
+    .return {
+        display: none;
+    }
+}
 .container {
-    padding: 0 auto !important;
-    max-width: 1550px !important;
-    margin-top: 95px !important;
+    margin: 75px auto 0;
+    max-width: 1550px;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     background-color: #ffffff;
+    padding: 0 2rem;
 }
+
 
 i {
     font-size: 18px;
@@ -61,17 +85,43 @@ i {
 }
 
 .form {
-    max-width: 800px;
+    max-width: 900px;
     width: 100%;
+    height: auto;
+    margin-top: 0;
+    background-color: rgba(255, 255, 255, 0.9);
+    padding: 20px;
+    border-radius: 16px;
+    box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1);
+    z-index: 2;
 }
 
 .wrapper {
-    margin-top: 110px;
+    margin-top: 0;
+    margin-bottom: -90px;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    background-color: #ffffff;
+    width: 100%;
+    max-width: 500px;
+    aspect-ratio: 3 / 4;
+    background-color: rgba(255, 255, 255, 0.9);
+    padding-left: 2rem;
+    padding-right: 2rem;
+    border-radius: 16px;
+    box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1);
+    z-index: 2;
+}
+
+
+@media (max-width: 600px) {
+    .wrapper {
+        width: auto;
+    }
+    .hero-banner .home-banner {
+        height: calc(100vh - 10px);
+    }
 }
 
 .signin {
@@ -136,7 +186,6 @@ i {
     margin-left: .25em;
 }
 
-/*titulo*/
 .titulo {
     border-radius: 3px;
     display: flex;
@@ -200,7 +249,7 @@ mat-paginator .mat-mdc-icon-button {
 }
 
 .marca-vhc a:hover {
-    color: #3f51b5 !important;
+    color: #0574A1 !important;
 }
 
 /* lg */
@@ -215,4 +264,159 @@ mat-paginator .mat-mdc-icon-button {
     .card-title {
         min-height: 80px;
     }
+}
+
+.snackbar-exito .mdc-snackbar__surface {
+    background-color: #C8E6C9 !important;
+    font-weight: 500;
+    border-radius: 4px;
+    box-shadow: 0 2px 6px rgba(0, 0, 0, 0.3);
+    margin-top: 80px !important;
+}
+
+.snackbar-error .mdc-snackbar__surface {
+    background-color: #FFCDD2 !important;
+    font-weight: 500;
+    border-radius: 4px;
+    box-shadow: 0 2px 6px rgba(0, 0, 0, 0.3);
+    margin-top: 80px !important;
+}
+
+.snackbar-exito .mat-mdc-snack-bar-label {
+    color: #256029 !important;
+}
+
+.snackbar-error .mat-mdc-snack-bar-label {
+    color: #B71C1C !important;
+}
+
+.hero-banner {
+    position: relative;
+    width: 100vw;
+    left: 0;
+    right: 0;
+    height: calc(100vh - 60px);
+    max-width: 100vw;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    overflow: hidden;
+    margin-top: 10px;
+    margin-bottom: -60px;
+}
+
+.hero-banner::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-image: url('/assets/img/welcome.png');
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    opacity: 0.07;
+    z-index: 1;
+}
+
+@media (max-width: 768px) {
+    .hero-banner .home-banner {
+        height: calc(100vh - 60px);
+    }
+
+    .hero-banner::before {
+        background-image: url('/assets/img/welcome-mobile.png');
+    }
+
+    .overlay-content .wrapper {
+        width: 75%;
+        max-width: 400px;
+        padding: 1.5rem;
+    }
+
+    .overlay-content h1 {
+        font-size: 1.8rem;
+    }
+
+    .btn {
+        font-size: 0.95rem;
+        padding: 0.65rem;
+    }
+
+    :host ::ng-deep .mat-dialog-container {
+        width: 90vw !important;
+    }
+}
+
+mat-slide-toggle {
+    transform: scale(1.1);
+}
+
+.container-fluid {
+    background-color: #f1f3f696 !important;
+    padding: 0;
+}
+
+.tab-content .table-custom {
+    width: auto;
+    border-collapse: separate;
+    border-spacing: 0;
+    border-radius: 2px;
+    overflow: hidden;
+    table-layout: auto;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 0px;
+}
+
+.table-custom thead th {
+    font-weight: 600;
+    font-size: 16px;
+    color: #434343;
+    background-color: #c29e49e4 ;
+    color: white;
+    border-bottom: 3px solid #f1f3f696;
+    height: 45px;
+    padding: 10px 15px;
+    text-align: left;
+    min-width: 100px;
+    vertical-align: middle;
+    border-top: none;
+}
+
+.table-custom tbody tr {
+    border-bottom: 4px solid #f1f3f6b5;
+}
+
+.table-custom tbody td {
+    padding: 10px 15px;
+    vertical-align: middle;
+}
+
+.table-custom td:last-child,
+.table-custom th:last-child {
+    border-right: none;
+    border-top: none;
+}
+
+:host ::ng-deep .mat-dialog-container {
+    width: 40vw;
+    max-width: 90vw;
+}
+
+.table-custom th,
+.table-custom td {
+    border: 1px solid #dee2e6 !important;
+    padding: 12px;
+    vertical-align: middle;
+}
+
+.table-custom> :not(caption)>*>* {
+    border-bottom-width: 1px !important;
+}
+
+.table-custom {
+    border-collapse: collapse;
+    width: 100%;
 }
